[package]
name = "google_maps"
version = "3.5.2"
authors = [ "Dylan Bowker <dylan.bowker@arkiteq.ca>" ]
edition = "2021"
categories = [ "api-bindings" ]
description = "An unofficial Google Maps Platform client library for the Rust programming language."
documentation = "https://docs.rs/google_maps"
keywords = [ "directions", "distance", "elevation", "geocoding", "timezone" ]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/leontoeides/google_maps"
rust-version = "1.70.0"

[lib]
doctest = false

[features]
default = [
	# `autocomplete` covers the Places API autocomplete-related services.
	# All other Places API services are under "places" feature.
	"autocomplete",
	"directions",
	"distance_matrix",
	"elevation",
	"geocoding",
	"places",
	"roads",
	"time_zone",

	"rust_decimal/serde",

	"enable-reqwest",
	"reqwest/default-tls",
	"reqwest/gzip",
]
# Google Maps Client API features:
autocomplete = []
directions = [ "chrono", "chrono-tz" ]
distance_matrix = [ "chrono", "chrono-tz" ]
elevation = []
geocoding = []
places = [ "chrono", "chrono-tz" ]
roads = []
time_zone = [ "chrono", "chrono-tz" ]
# Geo ecosystem features:
geo = [ "geo-types" ]
# Reqwest features:
enable-reqwest = [ "reqwest", "backoff", "futures", "stream_throttle" ]
enable-reqwest-middleware = [ "reqwest-middleware", "http", "anyhow" ] # "reqwest-maybe-middleware/middleware"
brotli = [ "reqwest/brotli" ]
deflate = [ "reqwest/deflate" ]
gzip = [ "reqwest/gzip" ]
zstd = [ "reqwest/zstd" ]
native-tls = [ "reqwest/default-tls" ]
rustls = [ "reqwest/rustls-tls" ]
# Rust Decimal features:
decimal-serde = [ "rust_decimal/serde" ]
decimal-serde-float = [ "rust_decimal/serde-float" ]
decimal-serde-str = [ "rust_decimal/serde-str" ]
decimal-serde-arbitrary-precision = [ "rust_decimal/serde-arbitrary-precision" ]
decimal-serde-with-float = [ "rust_decimal/serde-with-float" ]
decimal-serde-with-str = [ "rust_decimal/serde-with-str" ]
decimal-serde-with-arbitrary-precision = [ "rust_decimal/serde-with-arbitrary-precision" ]

[dependencies]
backoff = { version = "0.4", optional = true, features = [ "futures", "tokio" ] }
chrono = { version = "0.4", optional = true, default-features = false, features = [ "clock", "serde", "std" ] }
chrono-tz = { version = "0.9", optional = true, features = [ "serde" ] }
futures = { version = "0.3", optional = true }
geo-types = { version = "0.7", optional = true, features = [ "serde" ] }
miette = "7.2"
percent-encoding = "2.3"
phf = { version = "0.11", features = [ "macros" ] }
polyline = { version = "0.11", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [ "json", "multipart" ] }
reqwest-middleware = { version = "0.3", optional = true }
rust_decimal = { version = "1.35", features = [ "serde" ] }
rust_decimal_macros = "1.34"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
stream_throttle = { version = "0.5", optional = true }
thiserror = "1.0"
tokio = { version = "1.38", optional = true, features = [ "time" ] }
tracing = { version = "0.1", features = [ "log" ] }

# The author of `reqwest-maybe-middleware` is not currently merging PR requests
# or updating the crate. This crate has been forked and integrated into
# `google_maps`. Hopefully this is temporary.
# reqwest-maybe-middleware = "0.3"
# Dependencies for our integrated `reqwest-maybe-middleware`:
http = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }

[badges]
maintenance = { status = "passively-maintained" }